--- a/GoTo/res/layout/activity_get_directions.xml
+++ b/GoTo/res/layout/activity_get_directions.xml
@@ -125,7 +125,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nothing"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:textSize="24sp" />
 
             </TableRow>
 
@@ -139,7 +140,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nothing"
-                    android:textColor="#000000" />
+                    android:textColor="#000000" 
+                    android:textSize="24sp"/>
 
             </TableRow>
 
@@ -153,7 +155,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nothing"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:textSize="24sp" />
 
             </TableRow>
 
@@ -167,7 +170,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nothing"
-                    android:textColor="#000000" />
+                    android:textColor="#000000" 
+                    android:textSize="24sp"/>
 
             </TableRow>
 
@@ -181,7 +185,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nothing"
-                    android:textColor="#000000" />
+                    android:textColor="#000000" 
+                    android:textSize="24sp"/>
 
             </TableRow>
 
