--- a/GoTo/res/layout/activity_building_list.xml
+++ b/GoTo/res/layout/activity_building_list.xml
@@ -179,35 +179,37 @@
 	                </com.beardedhen.androidbootstrap.BootstrapButton>
 	                
 	                 <com.beardedhen.androidbootstrap.BootstrapButton
-	                    android:id="@+id/bursarOfficeButton"
-	                    android:layout_width="fill_parent"
-	                    android:layout_height="wrap_content"
-	                    android:layout_marginBottom="10dp"
-	                    android:layout_marginLeft="10dp"
-	                    android:layout_marginRight="10dp"
-	                    android:text="@string/game_room"
-	                    android:textColor="#FFFF00"
-	                    bootstrapbutton:bb_icon_right="fa-star"
-	                    android:textSize="12sp"
-	                    fontawesometext:bb_roundedCorners="true"
-	                    fontawesometext:bb_size="large"
-	                    fontawesometext:bb_type="primary" >
+	                     android:id="@+id/bursarOfficeButton"
+	                     android:layout_width="fill_parent"
+	                     android:layout_height="wrap_content"
+	                     android:layout_marginBottom="10dp"
+	                     android:layout_marginLeft="10dp"
+	                     android:layout_marginRight="10dp"
+	                     android:text="@string/bursar"
+	                     android:textColor="#FFFF00"
+	                     android:textSize="12sp"
+	                     bootstrapbutton:bb_icon_right="fa-star"
+	                     fontawesometext:bb_roundedCorners="true"
+	                     fontawesometext:bb_size="large"
+	                     fontawesometext:bb_type="primary" >
+
 	                </com.beardedhen.androidbootstrap.BootstrapButton>
 	                
 	                  <com.beardedhen.androidbootstrap.BootstrapButton
-	                    android:id="@+id/registrarButton"
-	                    android:layout_width="fill_parent"
-	                    android:layout_height="wrap_content"
-	                    android:layout_marginBottom="10dp"
-	                    android:layout_marginLeft="10dp"
-	                    android:layout_marginRight="10dp"
-	                    android:text="@string/game_room"
-	                    android:textColor="#FFFF00"
-	                    bootstrapbutton:bb_icon_right="fa-star"
-	                    android:textSize="12sp"
-	                    fontawesometext:bb_roundedCorners="true"
-	                    fontawesometext:bb_size="large"
-	                    fontawesometext:bb_type="primary" >
+	                      android:id="@+id/registrarButton"
+	                      android:layout_width="fill_parent"
+	                      android:layout_height="wrap_content"
+	                      android:layout_marginBottom="10dp"
+	                      android:layout_marginLeft="10dp"
+	                      android:layout_marginRight="10dp"
+	                      android:text="@string/registrar"
+	                      android:textColor="#FFFF00"
+	                      android:textSize="12sp"
+	                      bootstrapbutton:bb_icon_right="fa-star"
+	                      fontawesometext:bb_roundedCorners="true"
+	                      fontawesometext:bb_size="large"
+	                      fontawesometext:bb_type="primary" >
+
 	                </com.beardedhen.androidbootstrap.BootstrapButton>
 	                
 		</TableLayout>
