--- a/GoTo/res/layout/activity_get_directions.xml
+++ b/GoTo/res/layout/activity_get_directions.xml
@@ -48,148 +48,15 @@
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_margin="10dp" >
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:id="@+id/directionsTable" >
 
-            <TableRow
-                android:id="@+id/tableRow2"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000"
-        			android:textSize="24sp" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow3"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000"
-        			android:textSize="24sp" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow4"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000"
-        			android:textSize="24sp" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow5"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000"
-                    android:textSize="24sp" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow6"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000"
-                    android:textSize="24sp" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow7"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000" 
-                    android:textSize="24sp"/>
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow8"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000"
-                    android:textSize="24sp" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow9"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000" 
-                    android:textSize="24sp"/>
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow10"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nothing"
-                    android:textColor="#000000" 
-                    android:textSize="24sp"/>
-
-            </TableRow>
-
+            
         </TableLayout>
 
     </ScrollView>
@@ -211,7 +78,7 @@
 	    android:layout_marginRight="20dp"
 	    android:layout_marginBottom="10dp"
 	    bootstrapbutton:bb_roundedCorners="true"
-	    bootstrapbutton:bb_size="medium"
+	    bootstrapbutton:bb_size="small"
 	    bootstrapbutton:bb_type="primary" />
     
     <com.beardedhen.androidbootstrap.BootstrapButton
@@ -224,7 +91,7 @@
 	    android:layout_marginRight="20dp"
 	    android:layout_marginBottom="10dp"
 	    bootstrapbutton:bb_roundedCorners="true"
-	    bootstrapbutton:bb_size="medium"
+	    bootstrapbutton:bb_size="small"
 	    bootstrapbutton:bb_type="primary" />
     
     <com.beardedhen.androidbootstrap.BootstrapButton
@@ -236,7 +103,7 @@
 	    android:layout_marginLeft="20dp"
 	    android:layout_marginRight="20dp"
 	    bootstrapbutton:bb_roundedCorners="true"
-	    bootstrapbutton:bb_size="medium"
+	    bootstrapbutton:bb_size="small"
 	    bootstrapbutton:bb_type="primary" />
 
 </TableLayout>
